--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   auto_orientation: ^1.0.6
   file_picker: ^1.9.0+1
   yaml: ^2.2.1
+  provider: ^4.1.2
   flutter:
     sdk: flutter
 
