--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   file_picker: ^1.9.0+1
   yaml: ^2.2.1
   provider: ^4.1.2
+  path_provider: ^1.6.9
   flutter:
     sdk: flutter
 
