--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   auto_orientation: ^1.0.6
   file_picker: ^1.9.0+1
-  yaml: ^2.2.1
+  package_info: ^0.4.0+18
   provider: ^4.1.2
   path_provider: ^1.6.9
   flutter:
