--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <!-- android:requestLegacyExternalStorage="true" -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="kali_editor"
+        android:label="Kali Editor"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
